force-app/main/default/objects/Simploud__Controlled_Document__c/Simploud__Controlled_Document__c.object-meta.xml
<CustomObject>
    <label>Controlled Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controlled Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>