force-app/main/default/objects/Simploud__Controlled_Document__c/fields/File_In_Cloud__c.field-meta.xml
<CustomField>
    <fullName>File_In_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File In Cloud</label>
    <type>Checkbox</type>
</CustomField>