force-app/main/default/objects/Simploud__Controlled_Document__c/fields/Google_Docs_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Google_Docs_Permissions__c</fullName>
    <label>Google Docs Permissions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>