force-app/main/default/objects/Simploud__Controlled_Document__c/fields/Google_Docs_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Docs_URL__c</fullName>
    <label>Google Docs URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>