force-app/main/default/objects/Simploud__Controlled_Document__c/fields/OneDrive_Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>OneDrive_Embed_URL__c</fullName>
    <label>OneDrive Embed URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>