force-app/main/default/objects/Simploud__Controlled_Document__c/fields/OneDrive_Owner_Shared_Link__c.field-meta.xml
<CustomField>
    <fullName>OneDrive_Owner_Shared_Link__c</fullName>
    <label>OneDrive Owner Shared Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>