force-app/main/default/objects/Simploud__Controlled_Document__c/fields/OneDrive_Permission__c.field-meta.xml
<CustomField>
    <fullName>OneDrive_Permission__c</fullName>
    <label>OneDrive Permission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>