force-app/main/default/objects/Simploud__Controlled_Document__c/fields/Uploaded_File_Extension__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File_Extension__c</fullName>
    <label>Uploaded File Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>