force-app/main/default/objects/Simploud__Controlled_Document__c/fields/Use_Document_Collaboration_Tool__c.field-meta.xml
<CustomField>
    <fullName>Use_Document_Collaboration_Tool__c</fullName>
    <label>Use Document Collaboration Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>